--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,62 +1,64 @@
-name : CI/CD for Dockerized Flask App
+name: CI/CD for Dockerized Flask App
 
 on:
-    push:
-      branches: [main]
-    pull_request:
-      branches: [main]
-
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
+  dockerbuild:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Build The Docker Image
+      run: docker build . --file DockerFile --tag workflow-test:$(date +%s)
+  build-and-test:
+    runs-on: ubuntu-latest
 
-    build-and-test: 
-      runs-on: ubuntu-latest
-    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      step:
-      - name: checkout code
-        user: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
 
-      - name: set up python
-        user: action/setup-python@v4
-        with: 
-            python-version: '3.9'
-      
-      - name: Install dependencies
-        runs:
-          python -m pip install --upgrade pip
-          pip install flask
-          pip install pytest
-      
-      - name: run tests
-        runs:
-          pytest
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flask
+        pip install pytest
 
+    - name: Run tests
+      run: |
+        pytest
 
-    build-and-publish:
-      needs: build-and-test
-      runs-on: ubuntu-latest
+  build-and-publish:
+    needs: build-and-test
+    runs-on: ubuntu-latest
 
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      steps:
-      - name: Checkout code
-        users: actions/checkout@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
 
-      - name: set up docker buildx
-        user: docker/setup-buildx-action@v22
-      
-      - name: login to dockerhub
-        user: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Login to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: build and push Docker imageq
-        users: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/flasktest-app:latest
-      
-      - name: image digest
-        run: echo ${{ steps.build-and-publish.outputs.digest }} 
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        file: ./DockerFile
+        push: true
+        tags: ${{ secrets.DOCKER_USERNAME }}/flasktest-app:latest
+
+    - name: Image digest
+      run: echo ${{ steps.build-and-publish.outputs.digest }}
